--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,31 @@
 <p>Hello, World!</p>
 
-<input type="text"
-       placeholder="Pick one"
-       aria-label="Number"
-       matInput
-       [formControl]="myControl"
-       [matAutocomplete]="auto">
-<mat-autocomplete #auto="matAutocomplete">
-    <mat-option *ngFor="let option of options" [value]="option">
-      {{option}}
-    </mat-option>
-</mat-autocomplete>
+<!-- prolly gonna remove -->
+<!-- <mat-form-field>
+  <input type="text"
+    placeholder="Pick one"
+    aria-label="Number"
+    matInput
+    [formControl]="myControl"
+    [matAutocomplete]="auto">
+  <mat-autocomplete #auto="matAutocomplete">
+  <mat-option *ngFor="let option of options" [value]="option">
+  {{option}}
+  </mat-option>
+  </mat-autocomplete>
+</mat-form-field> -->
+
+<mat-form-field>
+  <input type="text"
+    placeholder="Search Wikidata"
+    matInput
+    [formControl]="myControl">
+</mat-form-field>
+
+<p>Results:</p>
+<p *ngFor="let result of searchResults">
+  <b>{{result.label}}</b>&nbsp;<span>{{result.description}}</span>
+</p>
+
+
+
